# flowersec

./: .develop.md  .dockerignore  .gitignore  AGENTS.md  BENCH_RESULTS.md  CONTROLPLANE_BEST_PRACTICES.md  Makefile  Package.resolved  Package.swift  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.ru-RU.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  THIRD_PARTY_NOTICES.md  go.work  go.work.sum
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  nightly-stability.yml  release.yml  rust-release.yml  (+1 more)
docs/: API_CHANGE_POLICY.md  API_CONTRACT.md  API_STABILITY_POLICY.md  API_SURFACE.md  CONNECT_ARTIFACTS.md  CONTROLPLANE_ARTIFACT_FETCH.md  CORRELATION_AND_DIAGNOSTICS.md  ERROR_MODEL.md  FRONTEND_QUICKSTART.md  INTEGRATION_GUIDE.md  MIGRATION_0.26.md  MIGRATION_0.27.md  MIGRATION_TRANSPORT_V2.md  PRESETS.md  PROTOCOL.md  PROXY.md  PROXY_GATEWAY_DEPLOYMENT.md  SCOPED_METADATA.md  STREAMS.md  THREAT_MODEL.md  TRANSPORT_V2_ARCHITECTURE.md  TRANSPORT_V2_RELEASE_EVIDENCE.md  TRANSPORT_V2_WIRE.md  TUNNEL_DEPLOYMENT.md  V0_18_MIGRATION.md  V0_19_MIGRATION.md  V0_20_MIGRATION.md  V0_21_MIGRATION.md  V0_23_MIGRATION.md
examples/: README.md  go.mod  go.sum  run-agent-endpoint.sh  run-controlplane-demo.sh  run-server-endpoint.sh  run-tunnel-server.sh
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/rust/tests/: capability_example.rs
flowersec-go/: README.md  THIRD_PARTY_NOTICES.md  artifact.go  artifact_test.go  connector.go  connector_internal_test.go  connector_public_test.go  go.mod  go.sum
flowersec-rust/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  deny.toml
flowersec-rust/examples/: interop_harness.rs
flowersec-rust/fuzz/: Cargo.toml
flowersec-rust/fuzz/fuzz_targets/: artifact.rs  handshake.rs  proxy.rs  token.rs  yamux.rs
flowersec-rust/sbom/: cyclonedx.json  spdx.json
flowersec-rust/src/: artifact.rs  artifact_v2.rs  client.rs  connector_v2.rs  controlplane.rs  crypto_v2.rs  defaults.rs  defaults_contract.rs  e2ee.rs  endpoint.rs  error.rs  framing.rs  idna_v2.rs  idna_v2_integration_tests.rs  lib.rs  observability.rs  open_v2_integration_tests.rs  protocol_v2.rs  proxy.rs  raw_quic_v2.rs  raw_quic_v2_integration_tests.rs  reconnect.rs  rpc.rs  session_v2.rs  session_v2_integration_tests.rs  streamhello.rs  streamio.rs  transport.rs  transport_security.rs  transport_v2.rs  transport_v2_crypto_integration_tests.rs  yamux.rs
flowersec-rust/tests/: artifact_fixtures.rs  artifact_v2_vectors.rs  core_contracts.rs  defaults_contract.rs  direct_integration.rs  e2ee_vectors.rs  endpoint_resolved.rs  go_interop.rs  handshake_roundtrip.rs  idna_v2.rs  issuer_rotation.rs  open_v2_vectors.rs  portable_protocol_vectors.rs  proxy_integration.rs  proxy_streaming.rs  raw_quic_v2.rs  reconnect_integration.rs  rpc_roundtrip.rs  sensitive_debug.rs  session_v2.rs  swift_interop.rs  transport_v2_contract.rs  transport_v2_crypto_vectors.rs  typescript_interop.rs  yamux_roundtrip.rs
flowersec-rust/tests/interop/: raw_quic_peer.go
flowersec-swift/: README.md
flowersec-ts/: LICENSE  README.md  THIRD_PARTY_NOTICES.md  YAMUX_ALIGNMENT.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
go/: go.mod
idl/: manifest.core.txt  manifest.examples.txt
sbom/: source-inventory.json  source.cyclonedx.json  source.spdx.json
scripts/: check-container-release-policy.mjs  check-go-security.mjs  check-readme-localizations.mjs  check-readme-localizations.test.mjs  check-release-version-consistency.mjs  check-release-version-consistency.test.mjs  check-release-workflow-policy.sh  check-release-workflows.rb  check-rust-security.mjs  check-security-makefile.mjs  check-swift-coverage.mjs  check-swift-security.mjs  check-transport-v2-evidence.sh  generate-source-inventory.mjs  generate-third-party-notices.mjs  generate-third-party-notices.test.mjs  go-security-modules.json  go-security.test.mjs  install-git-hooks.sh  readme-transport-v2-contract.mjs  release-go-targets.json  release.sh  release.test.mjs  run-go-test-race-shards.sh  rust-security.test.mjs  sbom-schema-lock.json  security-dependencies.test.mjs  security-makefile.test.mjs  source-inventory.test.mjs  source-license-policy.json  stage-release-compliance.sh  swift-security.test.mjs  third-party-go-licenses.json  verify-release-tags.sh
stability/: api_contract_manifest.json  connect_artifact.schema.json  connect_diagnostics_code_registry.json  connect_error_code_registry.json  interop_matrix.json  language_capabilities.json  proxy_preset_manifest.schema.json  public_api_manifest.json  sdk_defaults.json  transport_v2_contract.json
testdata/: issuer_rotation_vectors.json  portable_protocol_vectors.json  runtime_contract_vectors.json
ts/: YAMUX_ALIGNMENT.md  package-lock.json  package.json
(+1098 files in other folders)
