[package]
name = "flowersec"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
description = "Native Rust SDK for Flowersec secure direct and tunneled sessions"
license = "MIT"
repository = "https://github.com/floegence/flowersec"
homepage = "https://github.com/floegence/flowersec"
documentation = "https://docs.rs/flowersec"
readme = "README.md"
keywords = ["websocket", "quic", "e2ee", "rpc", "tunnel"]
categories = ["network-programming", "cryptography", "asynchronous"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml", "THIRD_PARTY_NOTICES.md", "sbom/**"]

[features]
default = ["rustls-native-roots"]
rustls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
hkdf = "0.12"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
idna = { version = "=1.1.0", default-features = false, features = ["std", "compiled_data"] }
idna_adapter = { version = "=1.1.0", features = ["compiled_data"] }
idna_mapping = "=1.0.0"
p256 = { version = "0.13", features = ["ecdh"] }
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
ring = { version = "=0.17.14", default-features = false, features = ["alloc"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "handshake", "url"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
unicode-normalization = "=0.1.25"
url = { version = "2", features = ["serde"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
