[package]
name = "flowersec-rust-client-example"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"

[dependencies]
flowersec = { version = "=2.0.0", path = "../../flowersec-rust" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
serde_json = "1"
