[package]
name = "flowersec-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
flowersec = { version = "=0.28.0", path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "artifact"
path = "fuzz_targets/artifact.rs"
test = false
doc = false
bench = false
